[gd_scene load_steps=2 format=3 uid="uid://cor4iaspwegan"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_fkoin"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fkoin")

[node name="PlayerBoxColor" type="Control" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 21.0
offset_top = -13.0
offset_right = 323.0
offset_bottom = 21.0
grow_vertical = 2

[node name="Color" type="ColorRect" parent="PlayerBoxColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
color = Color(0.328952, 0.144451, 0.190881, 1)

[node name="PlayerContainer" type="HBoxContainer" parent="PlayerBoxColor"]
layout_mode = 2
offset_right = 274.0
offset_bottom = 23.0

[node name="PlayerNameContainer" type="VBoxContainer" parent="PlayerBoxColor/PlayerContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="Joueur" type="Label" parent="PlayerBoxColor/PlayerContainer/PlayerNameContainer"]
layout_mode = 2
text = "Joueur "

[node name="PlayerColorContainer" type="VBoxContainer" parent="PlayerBoxColor/PlayerContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Couleur" type="Label" parent="PlayerBoxColor/PlayerContainer/PlayerColorContainer"]
layout_mode = 2
text = "Couleur "

[node name="PlayerScoreContainer" type="VBoxContainer" parent="PlayerBoxColor/PlayerContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Score" type="Label" parent="PlayerBoxColor/PlayerContainer/PlayerScoreContainer"]
layout_mode = 2
text = "Score "

[node name="CardPos" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReturnMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -158.0
offset_top = -52.0
offset_right = -24.0
offset_bottom = -21.0
grow_horizontal = 0
grow_vertical = 0
text = "Retour au menu"

[node name="ValidateCardPos" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -13.0
offset_right = -47.0
offset_bottom = 18.0
grow_horizontal = 0
grow_vertical = 2
text = "Valider
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -15.0
offset_top = 21.0
offset_right = 15.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
text = "test"

[node name="Color" type="ColorRect" parent="Label"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = 2.0
offset_right = 13.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
color = Color(0.328952, 0.144451, 0.190881, 1)

[node name="PlayZone" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -436.0
offset_top = -190.0
grow_horizontal = 2
grow_vertical = 0

[node name="6" type="ColorRect" parent="PlayZone"]
offset_left = 600.0
offset_right = 711.0
offset_bottom = 112.0

[node name="7" type="ColorRect" parent="PlayZone"]
offset_left = 720.0
offset_right = 831.0
offset_bottom = 112.0

[node name="4" type="ColorRect" parent="PlayZone"]
offset_left = 360.0
offset_right = 471.0
offset_bottom = 112.0

[node name="5" type="ColorRect" parent="PlayZone"]
offset_left = 480.0
offset_right = 591.0
offset_bottom = 112.0

[node name="3" type="ColorRect" parent="PlayZone"]
offset_left = 240.0
offset_right = 351.0
offset_bottom = 112.0

[node name="1" type="ColorRect" parent="PlayZone"]
offset_right = 111.0
offset_bottom = 112.0

[node name="2" type="ColorRect" parent="PlayZone"]
layout_mode = 0
offset_left = 120.0
offset_right = 231.0
offset_bottom = 112.0

[node name="Polygon2D" type="Polygon2D" parent="PlayZone"]
position = Vector2(-15, -2)
polygon = PackedVector2Array(943, 55, 856, -20, 855, 141)

[connection signal="pressed" from="ReturnMenu" to="." method="_on_return_menu_pressed"]
[connection signal="pressed" from="ValidateCardPos" to="." method="_on_validate_card_pos_pressed"]
